# supadupa

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TODO.md  pyproject.toml  setup.py
docs/: local_sensitive_hashing.md  mersenne_twister.md
etc/: test_run.mjs
notebooks/: explore-ngram.ipynb
scripts/: 010_mk_lsh_spec.py  011_gen_dupdata.py  012_gen_pandas.py  015_gen_dataset.py  020_fingerprint.py  020_rechunk.py  040_aggregate_hash_tables.py  create_hash_table.py  deduplicate_documents.py
